# fastapi-users-sqlmodel-example

./: .gitignore  README.md  alembic.ini  create-sample-data.py  pyproject.toml
alembic/: env.py  script.py.mako
app/: app.py  db.py  models.py  schemas.py  users.py
app/api/: deps.py
